--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@blockly/block-shareable-procedures": "^5.0.12",
     "@blockly/plugin-typed-variable-modal": "^8.0.12",
     "blockly": "^11.2.2",
     "react": "^19.0.0",
